<resources>
    <string name="app_name">D Bug</string>
    <string name="nxt">NXT</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="tattoo">Tattoo</string>
    <string name="studio"> Studio</string>
    <string name="main_headin">bio</string>
    <string name="jake">Jake</string>
    <string name="davies">Davies</string>
    <string name="lvl">LVL</string>
    <string name="i_do_art_i_">I do art, I have constant contact with it. It s not boring, and is something I really enjoy. I get to know a lot of people, different artists and very interesting customers and it pays well.</string>
    <string name="foto">foto</string>
    <string name="some_id">20</string>
    <string name="photos">PHOTOS</string>
    <string name="view_all">VIEW ALL</string>
    <string name="k">2.5k</string>
    <string name="full_body">Full Body</string>
    <string name="photorealis">Photorealistic</string>
    <string name="symbolic">SYMBOLIC</string>

</resources>