<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_marginTop="-30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cover_image_login"
        >
        <!-- NXT -->
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/nxtLini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="85dp"
                android:layout_marginLeft="49dp"
                android:lineHeight="82dp"
                android:fontFamily="@font/poppins_bold"
                android:id="@+id/nxt"
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:text="@string/nxt"
                android:textAppearance="@style/nxt"
                android:gravity="top"
                />
            <TextView
                android:layout_marginLeft="89dp"
                android:layout_below="@+id/nxt"
                android:fontFamily="@font/poppins_bold"
                android:lineHeight="81sp"
                android:id="@+id/lvl"
                android:layout_marginTop="-45dp"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/lvl"
                android:textAppearance="@style/lvl"
                android:gravity="top"
                />
        </LinearLayout>

        <!-- Tattoo -->
        <LinearLayout
            android:layout_marginLeft="40dp"
            android:layout_below="@+id/nxtLini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:lineHeight="27sp"
                android:fontFamily="@font/poppins_bold"
                android:id="@+id/tattoo"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/tattoo"
                android:textAppearance="@style/tattoo"
                android:gravity="top"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/poppins_bold"
                android:lineHeight="27sp"
                android:id="@+id/studio"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/studio"
                android:textAppearance="@style/studio"
                android:gravity="top"
                android:alpha="0.5"
                />
        </LinearLayout>

        <!-- login-->
        <TextView
            android:layout_marginRight="15dp"
            android:layout_marginTop="550dp"
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login"
            android:textAppearance="@style/login"
            android:alpha="0.12" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>