<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E7E7E7"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <RelativeLayout
        android:background="@drawable/cover_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- NXT -->
        <LinearLayout
            android:layout_marginRight="50dp"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:id="@+id/nxtLini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="85dp"
                android:layout_marginLeft="49dp"
                android:lineHeight="82dp"
                android:fontFamily="@font/poppins_bold"
                android:id="@+id/nxt"
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:text="@string/nxt"
                android:textAppearance="@style/nxt"
                android:gravity="top"
                />
            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="89dp"
                android:layout_below="@+id/nxt"
                android:fontFamily="@font/poppins_bold"
                android:lineHeight="81sp"
                android:id="@+id/lvl"
                android:layout_marginTop="-45dp"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/lvl"
                android:textAppearance="@style/lvl"
                android:gravity="top"
                />
        </LinearLayout>
        <!-- Tattoo -->
        <LinearLayout
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:lineHeight="27sp"
                android:fontFamily="@font/poppins_bold"
                android:id="@+id/tattoo"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/tattoo"
                android:textAppearance="@style/tattoo"
                android:gravity="top"
                android:textColor="#4A4A4A"
                />
            <TextView

                android:layout_marginLeft="5dp"
                android:fontFamily="@font/poppins_bold"
                android:lineHeight="27sp"
                android:id="@+id/studio"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/studio"
                android:textColor="#4A4A4A"
                android:textAppearance="@style/studio"
                android:gravity="top"
                android:alpha="0.5"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/iphonex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageView
            android:layout_marginBottom="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>