<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    tools:context=".BioActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@drawable/bio_cover_image"
            android:layout_width="match_parent"
            android:layout_height="620dp"/>
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!-- NXT -->
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:id="@+id/nxtLini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                style="@style/nxt_small"
                android:text="NXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                android:layout_marginLeft="10dp"
                android:layout_marginTop="-15dp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold|italic"
                style="@style/nxt_small"
                android:text="LVL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/main_headin"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/main_headin"
            android:textAppearance="@style/main_headin"
            android:gravity="right"
            />
        <TextView
            android:layout_marginRight="40dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_below="@+id/main_headin"
            android:id="@+id/jake"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/jake"
            android:textAppearance="@style/jake"
            android:gravity="right|top"
            />
        <!-- Davies -->
        <TextView
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="-18dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/jake"
            android:id="@+id/davies"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/davies"
            android:textAppearance="@style/davies"
            android:gravity="top|right"
            android:alpha="0.4"
            />
        <!-- I do art, I have con -->
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/davies"
            android:id="@+id/i_do_art_i_"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/i_do_art_i_"
            android:textAppearance="@style/i_do_art_i_"
            android:gravity="top"
            />
        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/iphonex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>