<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@drawable/signup_cover_lmage"
            android:layout_width="match_parent"
            android:layout_height="450dp"/>
        <!-- NXT -->
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/nxtLini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="40dp"
                android:layout_marginLeft="49dp"
                android:lineHeight="82dp"
                android:fontFamily="@font/poppins_bold"
                android:id="@+id/nxt"
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:text="@string/nxt"
                android:textAppearance="@style/nxt"
                android:gravity="top"
                />
            <TextView
                android:layout_marginLeft="89dp"
                android:layout_below="@+id/nxt"
                android:fontFamily="@font/poppins_bold"
                android:lineHeight="81sp"
                android:id="@+id/lvl"
                android:layout_marginTop="-45dp"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/lvl"
                android:textAppearance="@style/lvl"
                android:gravity="top"
                />
        </LinearLayout>
        <!-- Tattoo -->
        <LinearLayout
            android:layout_marginLeft="40dp"
            android:layout_below="@+id/nxtLini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:lineHeight="27sp"
                android:fontFamily="@font/poppins_bold"
                android:id="@+id/tattoo"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/tattoo"
                android:textAppearance="@style/tattoo"
                android:gravity="top"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/poppins_bold"
                android:lineHeight="27sp"
                android:id="@+id/studio"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/studio"
                android:textAppearance="@style/studio"
                android:gravity="top"
                android:alpha="0.5"
                />
        </LinearLayout>
        <!-- login-->
        <TextView
            android:layout_marginRight="15dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/signup"
            android:textAppearance="@style/login"
            android:alpha="0.12" />

        <EditText
            android:id="@+id/fullname"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="15dp"
            android:layout_below="@+id/signup"
            android:hint="Full name"
            android:background="@drawable/edite_text_view_backgraund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginTop="5dp"
            android:drawableRight="@drawable/person"
            android:id="@+id/username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="15dp"
            android:layout_below="@+id/fullname"
            android:background="@drawable/edite_text_view_backgraund"
            android:hint="username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:drawableRight="@drawable/pas_eye"
            android:id="@+id/pass"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="15dp"
            android:layout_below="@+id/username"
            android:background="@drawable/edite_text_view_backgraund"
            android:hint="username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/signupText"
            android:layout_marginLeft="42dp"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true"
            android:text="SIGNUP USING "
            android:textColor="#989898"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginLeft="42dp"
            android:layout_marginBottom="60dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginLeft="5dp"
                android:src="@drawable/googleplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <ImageView
            android:layout_marginBottom="30dp"
            android:src="@drawable/go_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>