<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    tools:context=".galleryActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@drawable/gallery_cover_image"
            android:layout_width="match_parent"
            android:layout_height="620dp"/>
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!-- NXT -->
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:id="@+id/nxtLini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                style="@style/nxt_small"
                android:text="NXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                android:layout_marginLeft="10dp"
                android:layout_marginTop="-15dp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold|italic"
                style="@style/nxt_small"
                android:text="LVL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/foto"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/foto"
            android:textAppearance="@style/main_headin"
            android:gravity="right"
            />
        <TextView
            android:layout_marginRight="40dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_below="@+id/foto"
            android:id="@+id/some_id"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/some_id"
            android:textAppearance="@style/jake"
            android:gravity="right|top"
            />
        <TextView
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="-18dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/some_id"
            android:id="@+id/photos"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/photos"
            android:textAppearance="@style/davies"
            android:gravity="top|right"
            android:alpha="0.4"
            />

        <LinearLayout
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cardview1"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        card_view:cardCornerRadius="8dp"
                        card_view:cardElevation="8dp"
                        android:layout_margin="1dp"
                        >
                        <ImageView
                            android:scaleType="fitXY"
                            android:src="@drawable/bitmap"
                            android:id="@+id/Imageview_itemView1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cardview2"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        card_view:cardCornerRadius="8dp"
                        card_view:cardElevation="8dp"
                        android:layout_margin="1dp"
                        >
                        <ImageView
                            android:scaleType="fitXY"
                            android:src="@drawable/bitmap2"
                            android:id="@+id/Imageview_itemView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cardview3"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        card_view:cardCornerRadius="8dp"
                        card_view:cardElevation="8dp"
                        android:layout_margin="1dp">
                        <ImageView
                            android:scaleType="fitXY"
                            android:src="@drawable/bitmap3"
                            android:id="@+id/Imageview_itemView3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cardview4"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        card_view:cardCornerRadius="8dp"
                        card_view:cardElevation="8dp"
                        android:layout_margin="1dp">
                        <ImageView
                            android:scaleType="fitXY"
                            android:src="@drawable/bitmap4"
                            android:id="@+id/Imageview_itemView4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:padding="15dp"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/view_all"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/view_all"
            android:background="@drawable/edite_text_view_backgraund"
            android:textAppearance="@style/view_all"
            />

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/iphonex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>